Updates, improvements, bug fixes
- Add events tabAdd, tabRemove, activeTabChange (Closes #4)
- Remove less useful chrome-tabs-render event
- Make tabOverlapDistance an option rather than reading it from CSS
- Add demo page description and improve title
- Fix minor transition bug with resizing browser after dragging a tab
- Code cleanup, naming improvements
- Remove render function for more clarity

--- a/css/chrome-tabs.css
+++ b/css/chrome-tabs.css
@@ -41,9 +41,6 @@
   user-select: none;
   cursor: default;
 }
-.chrome-tabs .chrome-tab:not(:last-child) {
-  margin-right: -1.4em;
-}
 .chrome-tabs .chrome-tab .chrome-tab-background {
   position: absolute;
   top: 0;
